# subspace-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: subspace-subagents.md
docs/planning/: test_guide.md
docs/planning/session_logs/: 2025-12-22-144820_handoff.json  2025-12-22-164727_handoff.json  2025-12-22-224224_handoff.json
docs/planning/specs/: cli_plan.md  quick_tasks.md
scripts/: install-codex-integration.sh  uninstall-codex-integration.sh
src/subspace/: __init__.py  __main__.py  cli.py
src/subspace/core/: __init__.py  commands.py  discovery.py  runner.py
tests/: test_cli.py  test_commands.py  test_runner.py
