[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subspace-agent"
version = "0.1.0"
description = "Subspace CLI - run Codex subagents and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
subspace = "subspace.cli:main"

[project.urls]
Homepage = "https://github.com/subspace/subspace-agent"
Issues = "https://github.com/subspace/subspace-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]
